src/grammar/MerrillTecplotParser.cpp

// Generated from grammar/MerrillTecplot.g4 by ANTLR 4.10.1


#include "MerrillTecplotVisitor.h"

#include "MerrillTecplotParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MerrillTecplotParserStaticData final {
  MerrillTecplotParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MerrillTecplotParserStaticData(const MerrillTecplotParserStaticData&) = delete;
  MerrillTecplotParserStaticData(MerrillTecplotParserStaticData&&) = delete;
  MerrillTecplotParserStaticData& operator=(const MerrillTecplotParserStaticData&) = delete;
  MerrillTecplotParserStaticData& operator=(MerrillTecplotParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag merrilltecplotParserOnceFlag;
MerrillTecplotParserStaticData *merrilltecplotParserStaticData = nullptr;

void merrilltecplotParserInitialize() {
  assert(merrilltecplotParserStaticData == nullptr);
  auto staticData = std::make_unique<MerrillTecplotParserStaticData>(
    std::vector<std::string>{
      "document", "title", "variables", "zone_title", "zone_nvert", "zone_nelem", 
      "zone_fe", "zone_et", "zone_varlocation_indices", "zone_varlocation", 
      "zone_varshare_indices_range", "zone_varshare_indices_index", "zone_varshare_indices", 
      "zone_varshare_indices_list", "zone_varshare", "zone_connectivity_share_zone", 
      "zone_component", "zone", "zone_float_block", "zone_integer_block"
    },
    std::vector<std::string>{
      "", "'TITLE'", "'VARIABLES'", "'ZONE'", "'T'", "'N'", "'E'", "'F'", 
      "'FEBLOCK'", "'ET'", "'TETRAHEDRON'", "'VARLOCATION'", "'CELLCENTERED'", 
      "'VARSHARELIST'", "'CONNECTIVITYSHAREZONE'", "'='", "'\"'", "','", 
      "'('", "')'", "'['", "']'", "'.'", "'-'", "'+'"
    },
    std::vector<std::string>{
      "", "TITLE", "VARIABLES", "ZONE", "T", "N", "E", "F", "FEBLOCK", "ET", 
      "TETRAHEDRON", "VARLOCATION", "CELLCENTERED", "VARSHARELIST", "CONNECTIVITYSHAREZONE", 
      "EQUALS", "DBLQUOTE", "COMMA", "OPAREN", "CPAREN", "OSQUARE", "CSQUARE", 
      "DECIMAL", "NEGATIVE", "POSITIVE", "StringLiteral", "UnterminatedStringLiteral", 
      "Integer", "Float", "WhiteSpace"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  merrilltecplotParserStaticData = staticData.release();
}

}

MerrillTecplotParser::MerrillTecplotParser(TokenStream *input) : MerrillTecplotParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MerrillTecplotParser::MerrillTecplotParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MerrillTecplotParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *merrilltecplotParserStaticData->atn, merrilltecplotParserStaticData->decisionToDFA, merrilltecplotParserStaticData->sharedContextCache, options);
}

MerrillTecplotParser::~MerrillTecplotParser() {
  delete _interpreter;
}

const atn::ATN& MerrillTecplotParser::getATN() const {
  return *merrilltecplotParserStaticData->atn;
}

std::string MerrillTecplotParser::getGrammarFileName() const {
  return "MerrillTecplot.g4";
}

const std::vector<std::string>& MerrillTecplotParser::getRuleNames() const {
  return merrilltecplotParserStaticData->ruleNames;
}

const dfa::Vocabulary& MerrillTecplotParser::getVocabulary() const {
  return merrilltecplotParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MerrillTecplotParser::getSerializedATN() const {
  return merrilltecplotParserStaticData->serializedATN;
}


//----------------- DocumentContext ------------------------------------------------------------------

MerrillTecplotParser::DocumentContext::DocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MerrillTecplotParser::TitleContext* MerrillTecplotParser::DocumentContext::title() {
  return getRuleContext<MerrillTecplotParser::TitleContext>(0);
}

MerrillTecplotParser::VariablesContext* MerrillTecplotParser::DocumentContext::variables() {
  return getRuleContext<MerrillTecplotParser::VariablesContext>(0);
}

std::vector<MerrillTecplotParser::ZoneContext *> MerrillTecplotParser::DocumentContext::zone() {
  return getRuleContexts<MerrillTecplotParser::ZoneContext>();
}

MerrillTecplotParser::ZoneContext* MerrillTecplotParser::DocumentContext::zone(size_t i) {
  return getRuleContext<MerrillTecplotParser::ZoneContext>(i);
}


size_t MerrillTecplotParser::DocumentContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleDocument;
}


std::any MerrillTecplotParser::DocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitDocument(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::DocumentContext* MerrillTecplotParser::document() {
  DocumentContext *_localctx = _tracker.createInstance<DocumentContext>(_ctx, getState());
  enterRule(_localctx, 0, MerrillTecplotParser::RuleDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    title();
    setState(41);
    variables();
    setState(42);
    zone();
    setState(46);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MerrillTecplotParser::ZONE) {
      setState(43);
      zone();
      setState(48);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TitleContext ------------------------------------------------------------------

MerrillTecplotParser::TitleContext::TitleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MerrillTecplotParser::TitleContext::TITLE() {
  return getToken(MerrillTecplotParser::TITLE, 0);
}

tree::TerminalNode* MerrillTecplotParser::TitleContext::EQUALS() {
  return getToken(MerrillTecplotParser::EQUALS, 0);
}

tree::TerminalNode* MerrillTecplotParser::TitleContext::StringLiteral() {
  return getToken(MerrillTecplotParser::StringLiteral, 0);
}


size_t MerrillTecplotParser::TitleContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleTitle;
}


std::any MerrillTecplotParser::TitleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitTitle(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::TitleContext* MerrillTecplotParser::title() {
  TitleContext *_localctx = _tracker.createInstance<TitleContext>(_ctx, getState());
  enterRule(_localctx, 2, MerrillTecplotParser::RuleTitle);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(MerrillTecplotParser::TITLE);
    setState(50);
    match(MerrillTecplotParser::EQUALS);
    setState(51);
    match(MerrillTecplotParser::StringLiteral);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariablesContext ------------------------------------------------------------------

MerrillTecplotParser::VariablesContext::VariablesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MerrillTecplotParser::VariablesContext::VARIABLES() {
  return getToken(MerrillTecplotParser::VARIABLES, 0);
}

tree::TerminalNode* MerrillTecplotParser::VariablesContext::EQUALS() {
  return getToken(MerrillTecplotParser::EQUALS, 0);
}

std::vector<tree::TerminalNode *> MerrillTecplotParser::VariablesContext::StringLiteral() {
  return getTokens(MerrillTecplotParser::StringLiteral);
}

tree::TerminalNode* MerrillTecplotParser::VariablesContext::StringLiteral(size_t i) {
  return getToken(MerrillTecplotParser::StringLiteral, i);
}

std::vector<tree::TerminalNode *> MerrillTecplotParser::VariablesContext::COMMA() {
  return getTokens(MerrillTecplotParser::COMMA);
}

tree::TerminalNode* MerrillTecplotParser::VariablesContext::COMMA(size_t i) {
  return getToken(MerrillTecplotParser::COMMA, i);
}


size_t MerrillTecplotParser::VariablesContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleVariables;
}


std::any MerrillTecplotParser::VariablesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitVariables(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::VariablesContext* MerrillTecplotParser::variables() {
  VariablesContext *_localctx = _tracker.createInstance<VariablesContext>(_ctx, getState());
  enterRule(_localctx, 4, MerrillTecplotParser::RuleVariables);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(MerrillTecplotParser::VARIABLES);
    setState(54);
    match(MerrillTecplotParser::EQUALS);
    setState(55);
    match(MerrillTecplotParser::StringLiteral);
    setState(60);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MerrillTecplotParser::COMMA) {
      setState(56);
      match(MerrillTecplotParser::COMMA);
      setState(57);
      match(MerrillTecplotParser::StringLiteral);
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Zone_titleContext ------------------------------------------------------------------

MerrillTecplotParser::Zone_titleContext::Zone_titleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MerrillTecplotParser::Zone_titleContext::T() {
  return getToken(MerrillTecplotParser::T, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_titleContext::EQUALS() {
  return getToken(MerrillTecplotParser::EQUALS, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_titleContext::StringLiteral() {
  return getToken(MerrillTecplotParser::StringLiteral, 0);
}


size_t MerrillTecplotParser::Zone_titleContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleZone_title;
}


std::any MerrillTecplotParser::Zone_titleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitZone_title(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::Zone_titleContext* MerrillTecplotParser::zone_title() {
  Zone_titleContext *_localctx = _tracker.createInstance<Zone_titleContext>(_ctx, getState());
  enterRule(_localctx, 6, MerrillTecplotParser::RuleZone_title);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(MerrillTecplotParser::T);
    setState(64);
    match(MerrillTecplotParser::EQUALS);
    setState(65);
    match(MerrillTecplotParser::StringLiteral);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Zone_nvertContext ------------------------------------------------------------------

MerrillTecplotParser::Zone_nvertContext::Zone_nvertContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MerrillTecplotParser::Zone_nvertContext::N() {
  return getToken(MerrillTecplotParser::N, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_nvertContext::EQUALS() {
  return getToken(MerrillTecplotParser::EQUALS, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_nvertContext::Integer() {
  return getToken(MerrillTecplotParser::Integer, 0);
}


size_t MerrillTecplotParser::Zone_nvertContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleZone_nvert;
}


std::any MerrillTecplotParser::Zone_nvertContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitZone_nvert(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::Zone_nvertContext* MerrillTecplotParser::zone_nvert() {
  Zone_nvertContext *_localctx = _tracker.createInstance<Zone_nvertContext>(_ctx, getState());
  enterRule(_localctx, 8, MerrillTecplotParser::RuleZone_nvert);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(MerrillTecplotParser::N);
    setState(68);
    match(MerrillTecplotParser::EQUALS);
    setState(69);
    match(MerrillTecplotParser::Integer);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Zone_nelemContext ------------------------------------------------------------------

MerrillTecplotParser::Zone_nelemContext::Zone_nelemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MerrillTecplotParser::Zone_nelemContext::E() {
  return getToken(MerrillTecplotParser::E, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_nelemContext::EQUALS() {
  return getToken(MerrillTecplotParser::EQUALS, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_nelemContext::Integer() {
  return getToken(MerrillTecplotParser::Integer, 0);
}


size_t MerrillTecplotParser::Zone_nelemContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleZone_nelem;
}


std::any MerrillTecplotParser::Zone_nelemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitZone_nelem(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::Zone_nelemContext* MerrillTecplotParser::zone_nelem() {
  Zone_nelemContext *_localctx = _tracker.createInstance<Zone_nelemContext>(_ctx, getState());
  enterRule(_localctx, 10, MerrillTecplotParser::RuleZone_nelem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(MerrillTecplotParser::E);
    setState(72);
    match(MerrillTecplotParser::EQUALS);
    setState(73);
    match(MerrillTecplotParser::Integer);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Zone_feContext ------------------------------------------------------------------

MerrillTecplotParser::Zone_feContext::Zone_feContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MerrillTecplotParser::Zone_feContext::F() {
  return getToken(MerrillTecplotParser::F, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_feContext::EQUALS() {
  return getToken(MerrillTecplotParser::EQUALS, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_feContext::FEBLOCK() {
  return getToken(MerrillTecplotParser::FEBLOCK, 0);
}


size_t MerrillTecplotParser::Zone_feContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleZone_fe;
}


std::any MerrillTecplotParser::Zone_feContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitZone_fe(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::Zone_feContext* MerrillTecplotParser::zone_fe() {
  Zone_feContext *_localctx = _tracker.createInstance<Zone_feContext>(_ctx, getState());
  enterRule(_localctx, 12, MerrillTecplotParser::RuleZone_fe);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(MerrillTecplotParser::F);
    setState(76);
    match(MerrillTecplotParser::EQUALS);
    setState(77);
    match(MerrillTecplotParser::FEBLOCK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Zone_etContext ------------------------------------------------------------------

MerrillTecplotParser::Zone_etContext::Zone_etContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MerrillTecplotParser::Zone_etContext::ET() {
  return getToken(MerrillTecplotParser::ET, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_etContext::EQUALS() {
  return getToken(MerrillTecplotParser::EQUALS, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_etContext::TETRAHEDRON() {
  return getToken(MerrillTecplotParser::TETRAHEDRON, 0);
}


size_t MerrillTecplotParser::Zone_etContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleZone_et;
}


std::any MerrillTecplotParser::Zone_etContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitZone_et(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::Zone_etContext* MerrillTecplotParser::zone_et() {
  Zone_etContext *_localctx = _tracker.createInstance<Zone_etContext>(_ctx, getState());
  enterRule(_localctx, 14, MerrillTecplotParser::RuleZone_et);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(MerrillTecplotParser::ET);
    setState(80);
    match(MerrillTecplotParser::EQUALS);
    setState(81);
    match(MerrillTecplotParser::TETRAHEDRON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Zone_varlocation_indicesContext ------------------------------------------------------------------

MerrillTecplotParser::Zone_varlocation_indicesContext::Zone_varlocation_indicesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MerrillTecplotParser::Zone_varlocation_indicesContext::Integer() {
  return getTokens(MerrillTecplotParser::Integer);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varlocation_indicesContext::Integer(size_t i) {
  return getToken(MerrillTecplotParser::Integer, i);
}

std::vector<tree::TerminalNode *> MerrillTecplotParser::Zone_varlocation_indicesContext::COMMA() {
  return getTokens(MerrillTecplotParser::COMMA);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varlocation_indicesContext::COMMA(size_t i) {
  return getToken(MerrillTecplotParser::COMMA, i);
}


size_t MerrillTecplotParser::Zone_varlocation_indicesContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleZone_varlocation_indices;
}


std::any MerrillTecplotParser::Zone_varlocation_indicesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitZone_varlocation_indices(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::Zone_varlocation_indicesContext* MerrillTecplotParser::zone_varlocation_indices() {
  Zone_varlocation_indicesContext *_localctx = _tracker.createInstance<Zone_varlocation_indicesContext>(_ctx, getState());
  enterRule(_localctx, 16, MerrillTecplotParser::RuleZone_varlocation_indices);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(MerrillTecplotParser::Integer);
    setState(88);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MerrillTecplotParser::COMMA) {
      setState(84);
      match(MerrillTecplotParser::COMMA);
      setState(85);
      match(MerrillTecplotParser::Integer);
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Zone_varlocationContext ------------------------------------------------------------------

MerrillTecplotParser::Zone_varlocationContext::Zone_varlocationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MerrillTecplotParser::Zone_varlocationContext::VARLOCATION() {
  return getToken(MerrillTecplotParser::VARLOCATION, 0);
}

std::vector<tree::TerminalNode *> MerrillTecplotParser::Zone_varlocationContext::EQUALS() {
  return getTokens(MerrillTecplotParser::EQUALS);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varlocationContext::EQUALS(size_t i) {
  return getToken(MerrillTecplotParser::EQUALS, i);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varlocationContext::OPAREN() {
  return getToken(MerrillTecplotParser::OPAREN, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varlocationContext::OSQUARE() {
  return getToken(MerrillTecplotParser::OSQUARE, 0);
}

MerrillTecplotParser::Zone_varlocation_indicesContext* MerrillTecplotParser::Zone_varlocationContext::zone_varlocation_indices() {
  return getRuleContext<MerrillTecplotParser::Zone_varlocation_indicesContext>(0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varlocationContext::CSQUARE() {
  return getToken(MerrillTecplotParser::CSQUARE, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varlocationContext::CELLCENTERED() {
  return getToken(MerrillTecplotParser::CELLCENTERED, 0);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varlocationContext::CPAREN() {
  return getToken(MerrillTecplotParser::CPAREN, 0);
}


size_t MerrillTecplotParser::Zone_varlocationContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleZone_varlocation;
}


std::any MerrillTecplotParser::Zone_varlocationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitZone_varlocation(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::Zone_varlocationContext* MerrillTecplotParser::zone_varlocation() {
  Zone_varlocationContext *_localctx = _tracker.createInstance<Zone_varlocationContext>(_ctx, getState());
  enterRule(_localctx, 18, MerrillTecplotParser::RuleZone_varlocation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(MerrillTecplotParser::VARLOCATION);
    setState(92);
    match(MerrillTecplotParser::EQUALS);
    setState(93);
    match(MerrillTecplotParser::OPAREN);
    setState(94);
    match(MerrillTecplotParser::OSQUARE);
    setState(95);
    zone_varlocation_indices();
    setState(96);
    match(MerrillTecplotParser::CSQUARE);
    setState(97);
    match(MerrillTecplotParser::EQUALS);
    setState(98);
    match(MerrillTecplotParser::CELLCENTERED);
    setState(99);
    match(MerrillTecplotParser::CPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Zone_varshare_indices_rangeContext ------------------------------------------------------------------

MerrillTecplotParser::Zone_varshare_indices_rangeContext::Zone_varshare_indices_rangeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MerrillTecplotParser::Zone_varshare_indices_rangeContext::Integer() {
  return getTokens(MerrillTecplotParser::Integer);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varshare_indices_rangeContext::Integer(size_t i) {
  return getToken(MerrillTecplotParser::Integer, i);
}

tree::TerminalNode* MerrillTecplotParser::Zone_varshare_indices_rangeContext::NEGATIVE() {
  return getToken(MerrillTecplotParser::NEGATIVE, 0);
}


size_t MerrillTecplotParser::Zone_varshare_indices_rangeContext::getRuleIndex() const {
  return MerrillTecplotParser::RuleZone_varshare_indices_range;
}


std::any MerrillTecplotParser::Zone_varshare_indices_rangeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MerrillTecplotVisitor*>(visitor))
    return parserVisitor->visitZone_varshare_indices_range(this);
  else
    return visitor->visitChildren(this);
}

MerrillTecplotParser::Zone_varshare_indices_rangeContext* MerrillTecplotParser::zone_varshare_indices_range() {
  Zone_varshare_indices_rangeContext *_localctx = _tracker.createInstance<Zone_varshare_indices_rangeContext>(_ctx, getState());
  enterRule(_localctx, 20, MerrillTecplotParser::RuleZone_varshare_indices_range);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(MerrillTecplotParser::Integer);
    setState(102);
    match(MerrillTecplotParser::NEGATIVE);
    setState(103);
    match(MerrillTecplotParser::Integer);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Zone_varshare_indices_indexContext ------------------------------------------------------------------

MerrillTecplotParser::Zone_varshare_indices_indexContext::Zone_varshare_indices_indexContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MerrillTecplotParser::Zone_varshare_indices_indexContext::Integer() {
  return getToken(MerrillTecplotParser::Integer, 0);
}

